# incline

./: .gitignore  CITATION.cff  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  python-publish.yml
docs/: api.md  api.rst  conf.py  examples.md  examples.rst  index.md  index.rst  installation.md  installation.rst  limitations.md  limitations.rst  quickstart.md  quickstart.rst
docs/_static/example_data/: sample_timeseries.csv
docs/examples_executable/: advanced_methods.md  basic_usage.md  index.md
examples/: incline_example.ipynb
incline/: __init__.py  advanced.py  gaussian_process.py  multiscale.py  seasonal.py  statespace.py  testing.py  trend.py
tests/: __init__.py  test_advanced.py  test_gaussian_process.py  test_multiscale.py  test_seasonal.py  test_statespace.py  test_testing.py  test_trend.py  test_trending_robust.py
