[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incline"
version = "0.1.3"
description = "Estimate Trend at a Particular Point in a Noisy Time Series"
authors = [
    {name = "Suriyan Laohaprapanon", email = "suriyant@gmail.com"},
    {name = "Gaurav Sood", email = "gsood07@gmail.com"}
]
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["time-series", "derivative", "slope", "trend", "savitzky-golay", "spline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.18.0",
    "scipy>=1.4.0"
]

[project.optional-dependencies]
dev = [
    "check-manifest",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme",
    "myst-parser",
    "jupyter",
    "matplotlib"
]
test = [
    "pytest>=6.0",
    "pytest-cov",
    "coverage"
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-autoapi"
]

[project.urls]
Homepage = "https://github.com/soodoku/incline"
Documentation = "https://soodoku.github.io/incline/"
Repository = "https://github.com/soodoku/incline"
Issues = "https://github.com/soodoku/incline/issues"

[tool.setuptools]
packages = ["incline"]

[tool.setuptools.package-data]
incline = ["data/*.csv", "examples/*.ipynb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["incline"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info"
]