[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "incline"
version = "0.3.0"
description = "Estimate Trend at a Particular Point in a Noisy Time Series"
authors = [
    {name = "Suriyan Laohaprapanon", email = "suriyant@gmail.com"},
    {name = "Gaurav Sood", email = "gsood07@gmail.com"}
]
readme = "README.rst"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["time-series", "derivative", "slope", "trend", "savitzky-golay", "spline"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.18.0",
    "scipy>=1.4.0"
]

[project.optional-dependencies]
advanced = [
    "statsmodels>=0.13.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0"
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "myst-parser>=2.0",
    "sphinx-autoapi>=3.0",
    "sphinx-autodoc-typehints>=1.25"
]

[dependency-groups]
dev = [
    "check-manifest",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.7.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "jupyter",
    "matplotlib"
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "coverage"
]

[project.urls]
Homepage = "https://github.com/finite-sample/incline"
Documentation = "https://finite-sample.github.io/incline/"
Repository = "https://github.com/finite-sample/incline"
Issues = "https://github.com/finite-sample/incline/issues"

[tool.hatch.build.targets.wheel]
packages = ["incline"]

[tool.hatch.build]
include = [
  "incline/data/*.csv",
  "incline/examples/*.ipynb"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=incline --cov-report=html --cov-report=term-missing -v"

[tool.coverage.run]
source = ["incline"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  ".venv",
  "docs",
  ".eggs",
  "*.egg-info",
  "*.ipynb"
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]
"examples/*" = ["E402", "F841", "E722"]

[tool.ruff.lint.isort]
known-first-party = ["incline"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true